force-app/main/default/objects/blng__PaymentRun__c/blng__PaymentRun__c.object-meta.xml
<CustomObject>
    <label>Payment Run</label>
    <nameField>
        <label>Payment Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>