force-app/main/default/objects/blng__PaymentRun__c/fields/blng__ApexJobIdForCleanUp__c.field-meta.xml
<CustomField>
    <fullName>blng__ApexJobIdForCleanUp__c</fullName>
    <label>Apex Job Id (Clean Up)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>