force-app/main/default/objects/blng__PaymentRun__c/fields/blng__PaymentScheduler__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentScheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Scheduler</label>
    <referenceTo>blng__PaymentScheduler__c</referenceTo>
    <relationshipLabel>Payment Runs</relationshipLabel>
    <relationshipName>PaymentSchedulerPaymentRuns</relationshipName>
    <type>Lookup</type>
</CustomField>