force-app/main/default/objects/blng__PaymentRun__c/fields/blng__SuccessfulTransactions__c.field-meta.xml
<CustomField>
    <fullName>blng__SuccessfulTransactions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Successful Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>