force-app/main/default/objects/blng__PaymentRun__c/fields/blng__TotalPaymentProcessed__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalPaymentProcessed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Payment Processed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>