force-app/main/default/objects/blng__PaymentRun__c/fields/blng__TransactionsGenerated__c.field-meta.xml
<CustomField>
    <fullName>blng__TransactionsGenerated__c</fullName>
    <formula>blng__FailedTransactions__c +  blng__SuccessfulTransactions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transactions Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>